--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.google.android.material:material:1.4.0'
+    //ROOM
+
+    implementation "androidx.room:room-runtime:2.4.2"
+
+    annotationProcessor "androidx.room:room-compiler:2.4.2"
+
+
+    //VIEW MODEL & LIVE DATA
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.5.0'
 }
